v4.9.0/_sources/generated/pcdsdevices.sample_delivery.M3BasePLCDevice.rst.txt
pcdsdevices.sample\_delivery.M3BasePLCDevice
============================================

.. currentmodule:: pcdsdevices.sample_delivery

.. autoclass:: M3BasePLCDevice

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - status
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:IO:SyncUnitOK``
          - 
          - normal
          - 
    

    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    